--- a/api/package.json
+++ b/api/package.json
@@ -5,12 +5,13 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js" 
+    "start": "nodemon server.js"
   },
   "author": "Michelle Hallmann",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-ws": "^5.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
